finished. Happy Holidays

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 
     <meta charset="UTF-8">
-    <title>TimeSheet</title>
+    <title>Train Scheduler</title>
 
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -26,14 +26,12 @@
 <body>
 
     <div class="container">
-
         <br>
-
         <body>
                 <div class="container"> 
                         <div class="jumbotron">
                                 <h1 class="display-4 text-center">Anytime is Train Time</h1>
-                                <p class="lead text-center">Chugga Chugga. Hiss. Screach. Stop Jolt. Get Out Fast!
+                                <p class="lead text-center">Chugga Chugga. Hiss. Screatch. Stop Jolt. Get Out Fast!
                                 </div>
                         <h5>Current Train Schedule</h5>
                         <table class="table">
@@ -47,18 +45,16 @@
                                   </tr>
                                 </thead>
                                 <tbody>
-                                 
-                                </tbody>
                               </table>
 
 
         <!-- Form entry -->
         <br>
         <h5>Add Train</h5>
-        <form role="form">
+        <form role="form" >
             <div class="form-group">
                 <label for="name-input">Train Name</label>
-                <input class="form-control" id="trainname-input" type="text">
+                <input class="form-control" id="trainName-input" type="text">
             </div>
             <div class="form-group">
                 <label for="role-input">Destination</label>
